header part complete

--- a/index.html
+++ b/index.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="style.css" />
-   <title>Personal Portfolio</title>
-</head>
-<body>
-   <header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Personal Portfolio</title>
+  </head>
+  <body>
+    <header class="nav-wrapper">
       <h2>Md Parvej</h2>
-      <nav>
-         <a href="">Home</a><a href="">Projects</a><a href="">Contact</a>
+      <nav class="nav-links-wrapper">
+        <a href="" class="nav-link">Home</a><span>/</span>
+        <a href="" class="nav-link">Projects</a><span>/</span>
+        <a href="" class="nav-link">Contact</a>
       </nav>
-   </header>
-   <h3>Frontend developer</h3>
-   <article>
+    </header>
+    <h3 class="heading">Frontend developer</h3>
+    <article>
       
-   </article>
-</body>
+    </article>
+  </body>
 </html>
