--- a/index.html
+++ b/index.html
@@ -17,7 +17,20 @@
     </header>
     <h3 class="heading">Frontend developer</h3>
     <article>
-      
+      <secttion class="projects">
+        <h3>Project</h3>
+        <a href="" class="project-link">Html only Portfolio</a>
+        <a href="" class="project-link">Calculator</a
+        ><a href="" class="project-link">Quiz App</a
+        ><a href="" class="project-link">Countdown Timer</a>
+        <a href="" class="project-link">Product Upcoming Page</a>
+      </secttion>
+      <secttion class="work-experience">
+        <h3>work experience</h3>
+      </secttion>
+      <secttion class="education">
+        <h3>Education</h3>
+      </secttion>
     </article>
   </body>
 </html>
