experience section completed

--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
       </secttion>
       <secttion class="work-experience">
         <h3>work experience</h3>
+        <p>Solve all Frontend Projects</p>
+        <a href="">Visit my Profile</a>
+        <section class="openSource-work">
+        <h3>openSource work</h3>
+<p>Contributed to some opern source projects. Made my own projects with 200 Github stars.</p>
+<a href="" class="github-profile-link">Visit my Github Profile</a>
+        </section>
       </secttion>
       <secttion class="education">
         <h3>Education</h3>
