Education section completed

--- a/index.html
+++ b/index.html
@@ -37,6 +37,17 @@
       </secttion>
       <secttion class="education">
         <h3>Education</h3>
+        <p>I have graduated recently with a Bachelor of Computer Applications degree securing a second division</p>
+        <h3>Skills</h3>
+        <ul type="none">
+         <li>JavaScript</li>
+         <li>ReactJS</li>
+         <li>RestFul Api's</li>
+         <li>Redux</li>
+         <li>Html5</li>
+         <li>CSS3</li>
+         <li>Bootstrap</li>
+        </ul>
       </secttion>
     </article>
   </body>
