complete review section and footer

--- a/index.html
+++ b/index.html
@@ -19,36 +19,62 @@
     <article>
       <secttion class="projects">
         <h3>Project</h3>
-        <a href="" class="project-link">Html only Portfolio</a>
-        <a href="" class="project-link">Calculator</a
-        ><a href="" class="project-link">Quiz App</a
-        ><a href="" class="project-link">Countdown Timer</a>
-        <a href="" class="project-link">Product Upcoming Page</a>
+          <a href="" class="project-link">Html only Portfolio</a>
+          <a href="" class="project-link">Calculator</a
+          ><a href="" class="project-link">Quiz App</a
+          ><a href="" class="project-link">Countdown Timer</a>
+          <a href="" class="project-link">Product Upcoming Page</a>
+       
       </secttion>
       <secttion class="work-experience">
         <h3>work experience</h3>
         <p>Solve all Frontend Projects</p>
         <a href="">Visit my Profile</a>
         <section class="openSource-work">
-        <h3>openSource work</h3>
-<p>Contributed to some opern source projects. Made my own projects with 200 Github stars.</p>
-<a href="" class="github-profile-link">Visit my Github Profile</a>
+          <h3>openSource work</h3>
+          <p>
+            Contributed to some opern source projects. Made my own projects with
+            200 Github stars.
+          </p>
+          <a href="" class="github-profile-link">Visit my Github Profile</a>
         </section>
       </secttion>
       <secttion class="education">
         <h3>Education</h3>
-        <p>I have graduated recently with a Bachelor of Computer Applications degree securing a second division</p>
+        <p>
+          I have graduated recently with a Bachelor of Computer Applications
+          degree securing a second division
+        </p>
         <h3>Skills</h3>
         <ul type="none">
-         <li>JavaScript</li>
-         <li>ReactJS</li>
-         <li>RestFul Api's</li>
-         <li>Redux</li>
-         <li>Html5</li>
-         <li>CSS3</li>
-         <li>Bootstrap</li>
+          <li>JavaScript</li>
+          <li>ReactJS</li>
+          <li>RestFul Api's</li>
+          <li>Redux</li>
+          <li>Html5</li>
+          <li>CSS3</li>
+          <li>Bootstrap</li>
         </ul>
       </secttion>
     </article>
+    <h3 class="review-text-heading">Reviews from my Teacher</h3>
+
+    <section class="reviews-section">
+      <p class="review-text-container review-txt1">
+        Md Parvej doe was a brilliant studen, always stood out with his
+        assignments.
+      </p>
+      <p class="review-text-container review-txt2">
+        Md Parvej doe was a brilliant studen, always stood out with his
+        assignments.
+      </p>
+      <p class="review-text-container">
+        Md Parvej doe was a brilliant studen, always stood out with his
+        assignments.
+      </p>
+    </section>
+    <footer>
+      <p class="footer-text">all rights reserved 2025</p>
+    </footer>
   </body>
 </html>
