--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       <h2>Md Parvej</h2>
       <nav class="nav-links-wrapper">
         <a href="" class="nav-link">Home</a><span>/</span>
-        <a href="" class="nav-link">Projects</a><span>/</span>
-        <a href="" class="nav-link">Contact</a>
+        <a href="projects.html" class="nav-link">Projects</a><span>/</span>
+        <a href="contact.html" class="nav-link">Contact</a>
       </nav>
     </header>
     <h3 class="heading">Frontend developer</h3>
