project page completed

--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,13 @@
    <title>Personal Portfolio</title>
 </head>
 <body>
-   
+   <header class="nav-wrapper">
+      <h2>Md Parvej</h2>
+      <nav class="nav-links-wrapper">
+        <a href="index.html" class="nav-link">Home</a><span>/</span>
+        <a href="projects.html" class="nav-link">Projects</a><span>/</span>
+        <a href="contact.html" class="nav-link">Contact</a>
+      </nav>
+    </header>
 </body>
 </html>
