--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             Contributed to some opern source projects. Made my own projects with
             200 Github stars.
           </p>
-          <a href="" class="github-profile-link">Visit my Github Profile</a>
+          <a href="https://github.com/parvejg" target="_blank" class="github-profile-link">Visit my Github Profile</a>
         </section>
       </secttion>
       <secttion class="education">
