--- a/projects.html
+++ b/projects.html
@@ -8,6 +8,36 @@
    <title>Personal Portfolio</title>
 </head>
 <body>
-   
+   <header class="nav-wrapper">
+      <h2>Md Parvej</h2>
+      <nav class="nav-links-wrapper">
+        <a href="index.html" class="nav-link">Home</a><span>/</span>
+        <a href="projects.html" class="nav-link">Projects</a><span>/</span>
+        <a href="contact.html" class="nav-link">Contact</a>
+      </nav>
+    </header>
+    <main class="projects-page-wrapper">
+     <section class="projects-wrapper">
+      <h3>To do List</h3>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque totam quaerat veniam quibusdam eveniet explicabo vitae, nulla, voluptatibus ipsam illo voluptates veritatis omnis. Recusandae vero repellat amet dolores cum ex.</p>
+      <a href="" class="project-link">Check here</a>
+     </section>
+
+     <section class="projects-wrapper">
+      <h3>Calculator</h3>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque totam quaerat veniam quibusdam eveniet explicabo vitae, nulla, voluptatibus ipsam illo voluptates veritatis omnis. Recusandae vero repellat amet dolores cum ex.</p>
+      <a href="" class="project-link">Check here</a>
+     </section>
+     <section class="projects-wrapper">
+      <h3>Quiz App</h3>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque totam quaerat veniam quibusdam eveniet explicabo vitae, nulla, voluptatibus ipsam illo voluptates veritatis omnis. Recusandae vero repellat amet dolores cum ex.</p>
+      <a href="" class="project-link">Check here</a>
+     </section>
+     <section class="projects-wrapper">
+      <h3>Countdown Timer</h3>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque totam quaerat veniam quibusdam eveniet explicabo vitae, nulla, voluptatibus ipsam illo voluptates veritatis omnis. Recusandae vero repellat amet dolores cum ex.</p>
+      <a href="" class="project-link">Check here</a>
+     </section>
+    </main>
 </body>
 </html>
