--- a/contact.html
+++ b/contact.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="style.css" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
 
-   <title>Personal Portfolio</title>
-</head>
-<body>
-   <header class="nav-wrapper">
+    <title>Personal Portfolio</title>
+  </head>
+  <body>
+    <header class="nav-wrapper">
       <h2>Md Parvej</h2>
       <nav class="nav-links-wrapper">
         <a href="index.html" class="nav-link">Home</a><span>/</span>
@@ -16,5 +16,22 @@
         <a href="contact.html" class="nav-link">Contact</a>
       </nav>
     </header>
-</body>
+    <form class="form-wrapper">
+      <h1>Contact us</h1>
+      <label for="first-name" >First Name:</label>
+      <input type="text" id="first-name" placeholder="Enter your First name" />
+      <label for="last-name" >Last Name:</label>
+
+      <input
+      id="last-name"
+        type="text"
+        placeholder="Enter your Last name"
+      />
+      <label for="email" >Email:</label>
+
+      <input id="email" type="text" placeholder="Enter your Email" />
+      <textarea placeholder="description..."></textarea>
+      <button>Submit</button>
+    </form>
+  </body>
 </html>
