add meta and og tag

--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,16 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="style.css" />
-
+   <meta name="description" content="Personal Portfolio with semantic html and responsive">
+   <meta http-equiv="refresh" content="30">
+   <meta name="author" content="Md Parvej">
+   <meta name="robots" content="index, follow">
+   <meta property="og:title" content="Personal Portfolio">
+   <meta property="og:url" content="md-parvej-personal-portfolio.netlify.app">
+   <meta property="og:type" content="website">
+   <meta property="og:description" 
+   content="Explore my  Personal Portfolio as a Frontend Developer, with projects in include Html, Css ."
+   >
    <title>Personal Portfolio</title>
 </head>
 <body>
