--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@
    <meta name="author" content="Md Parvej">
    <meta name="robots" content="index, follow">
    <meta property="og:title" content="Personal Portfolio">
-   <meta property="og:url" content="md-parvej-personal-portfolio.netlify.app">
+   <meta property="og:url" content="md-parvej-personal-portfolio.vercel.app">
    <meta property="og:type" content="website">
    <meta property="og:description" 
    content="Explore my  Personal Portfolio as a Frontend Developer, with projects in include Html, Css ."
